
* GITHUB#14176: Avoid the per-doc virtual call when building competitive iterator for dynamic pruning. (Guo Feng)

# GITHUB#14361: Introduce new encoding of BPV 21 for DocIdsWriter used in BKD Tree. (Aniketh Jain, Guo Feng)

* GITHUB#14331: Speedup merging of HNSW graphs. (Mayya Sharipova, Tom Veasey)

Bug Fixes
---------------------

* GITHUB#14109: prefetch may select the wrong memory segment for
  multi-segment slices. (Chris Hegarty)

* GITHUB#14123: SortingCodecReader NPE when segment has no (points, vectors, etc...) (Mike Sokolov)

* GITHUB#14126: Avoid overflow in index input slices invariant checks
  (Chris Hegarty)

* GITHUB#14215: Fix degenerate case in HNSW where all vectors have the same score. (Ben Trent)

* GITHUB#14320: Fix DirectIOIndexInput seek to not read when position is within buffer (Chris Hegarty)

Changes in Runtime Behavior
---------------------
* GITHUB#14189: Bump floor segment size to 16MB in TieredMergePolicy and
  LogByteSizeMergePolicy. (Adrien Grand)

Other
---------------------

* GITHUB#14081: Fix urls describing why NIOFS is not recommended for Windows (Marcel Yeonghyeon Ko)

* GITHUB#14116 Use CDL to block threads to avoid flaky tests. (Ao Li)

* GITHUB#14130: Upgrade OpenNLP from 2.3.2 to 2.5.3, which transitively upgrades Slf4j
  from 1.7.36 to 2.0.16. (Michael Froh)

* GITHUB#14223 : Fixed a flaky test TestKnnFloatVectorQuery.testFindFewer (Navneet Verma)

* GITHUB#14372: Reduce visibility of NRTSuggester#load from public to package private (Luca Cavanna)

======================= Lucene 10.1.0 =======================

API Changes
---------------------

* GITHUB#13859: Allow open-ended ranges in Intervals range queries. (Mayya Sharipova)

* GITHUB#13950: Make BooleanQuery#getClauses public and add #add(Collection<BooleanClause>) to BQ builder. (Shubham Chaudhary)

* GITHUB#13957: Removed LeafSimScorer class, to save its overhead. Scorers now
  compute scores directly from a SimScorer, postings and norms. (Adrien Grand)
